--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,9 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
+  align-items: center;
   place-items: center;
   justify-content: center;
   min-width: 100vw;
